testsuite/tests/deriving/should_compile/T14331.hs
{-# LANGUAGE DeriveAnyClass #-}
module Bug where

class C p q

data D = D deriving (C (a :: k))
